TestSuite/errors/err0049.pas
type TClass = class(System.Collections.IEnumerable)
end;
    
begin

end.